# remote_controll

./: .env  .gitignore  CLAUDE.md  LICENSE  docker-compose.yml  visifib_audit_report.py  visifib_audit_report_v2.py
backend/: CMakeLists.txt  notes.txt
backend/include/: admin_panel.h  auth.h  config.h  database.h  email.h  http_routes.h  http_server.h  jwt.h  protocol.h  session_manager.h  socket_server.h  utils.h
backend/migrations/: 001_schema.sql  002_stored_procedures.sql
backend/src/: admin_panel.c  auth.c  config.c  database.c  email.c  http_routes.c  http_server.c  jwt.c  main.c  migrations.c  protocol.c  session_manager.c  socket_server.c  utils.c
desktop/linux/: .env  Makefile  input_x11.c  input_x11.h  login_window.c  login_window.h  main.c  server_net.c  tray.c  tray.h  volume_pulse.c  volume_pulse.h
desktop/mac/: .env  Makefile  client_net.c  input_macos.c  input_macos.h  main.m  volume_macos.c  volume_macos.h
desktop/shared/: rc_client.h  rc_desktop.h  rc_protocol.h
desktop/windows/: .env  CMakeLists.txt  Makefile.mingw  Makefile.mingw32  client_net.c  input_win32.c  input_win32.h  login_window.c  login_window.h  main.c  notes.txt  server_net.c  tray.c  tray.h  volume_win32.c  volume_win32.h
docker/c-server/: Dockerfile
docker/nginx/: Dockerfile  nginx.conf
docker/nginx/conf.d/: remotecontrol.conf
docker/pgadmin/: Dockerfile  servers.json
docker/pgbouncer/: Dockerfile  pgbouncer.ini  userlist.txt
docker/postfix/: Dockerfile  entrypoint.sh  main.cf
docker/postgresql/: Dockerfile
docker/postgresql/init/: 00-init.sql
docs/: architecture.md  desktop-build.md  mobile-build.md  setup.md
mobile/: .env  README.md  notes.txt  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/models/: event.dart
mobile/lib/providers/: auth_provider.dart  connection_provider.dart  remote_provider.dart
mobile/lib/screens/: control_screen.dart  discovery_screen.dart  login_screen.dart
mobile/lib/services/: api_service.dart  connection_service.dart  protocol.dart  socket_service.dart
mobile/lib/widgets/: dpad_widget.dart  keyboard_input.dart  (+3 more)
mobile/linux/: CMakeLists.txt
mobile/test/: widget_test.dart
(+3 files in other folders)
